[workspace]
members = [
	"mountpoint-s3-crt",
	"mountpoint-s3-crt-sys",
	"mountpoint-s3-client",
	"mountpoint-s3",
	"mountpoint-s3-fuser",
	"mountpoint-s3-fs",
]
resolver = "2"

[profile.release]
debug = 2
opt-level = 3
lto = true # Link-time optimization
codegen-units = 1  # Single compilation unit for better optimization
