[package]
name = "aws-crt-s3-sys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[build-dependencies]
bindgen = { version = "0.60.1", default-features = false, features = ["runtime"] }
cc = "1.0.73"
cmake = "0.1.48"
rustflags = "0.1.1"

[dependencies]
libc = "0.2.126"
log = "0.4.17"
smallstr = "0.3.0"

[lib]
doctest = false
bench = false
