[package]
name = "aws-crt-s3"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
aws-crt-s3-sys = { path = "../aws-crt-s3-sys" }
futures = "0.3.24"
libc = "0.2.132"
log = "0.4.17"
smallstr = "0.3.0"
static_assertions = "1.1.0"
thiserror = "1.0.35"

[dev-dependencies]
criterion = "0.4.0"
ctor = "0.1.23"
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter"] }

[[bench]]
name = "event_loop_future"
harness = false

[lib]
bench = false
