[tool.poetry]
package-mode = false
description = "Benchmark runner for measuring Mountpoint performance while varying configuration"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
