[project]
name = "benchmark"
version = "0.1.0"
description = "Benchmark runner for measuring Mountpoint performance while varying configuration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "psutil>=7.0.0",
]
[dependency-groups]
dev = [
    "pytest",
]
