[package]
name = "fuse-sys"
edition = "2018"
version = "0.4.0-dev"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
description = "FFI bindings to the FUSE kernel interface and libfuse"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/zargony/rust-fuse"
repository = "https://github.com/zargony/rust-fuse"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["external-ffi-bindings", "filesystem", "os::unix-apis"]
license = "MIT"
build = "build.rs"
links = "fuse"

[build-dependencies]
pkg-config = "0.3.14"

[dependencies]
