[package]
name = "fuser-sys"
edition = "2018"
version = "0.4.0"
authors = ["Christopher Berner <christopherberner@gmail.com"]
description = "FFI bindings to the FUSE kernel interface and libfuse"
documentation = "https://docs.rs/fuser"
homepage = "https://github.com/cberner/fuser"
repository = "https://github.com/cberner/fuser"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["external-ffi-bindings", "filesystem", "os::unix-apis"]
license = "MIT"
build = "build.rs"
links = "fuse"

[build-dependencies]
pkg-config = "0.3.14"

[dependencies]
