[package]
name = "mountpoint-s3-client"
# See `/doc/PUBLISHING_CRATES.md` to read how to publish new versions.
version = "0.18.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/awslabs/mountpoint-s3"
description = "High-performance Amazon S3 client for Mountpoint for Amazon S3."

[dependencies]
mountpoint-s3-crt = { path = "../mountpoint-s3-crt", version = "0.13.0" }

async-trait = "0.1.88"
auto_impl = "1.3.0"
base64ct = { version = "1.8.0", features = ["std"] }
bytes = "1.10.1"
const_format = "0.2.34"
futures = "0.3.31"
metrics = "0.24.2"
percent-encoding = "2.3.1"
pin-project = "1.1.10"
platform-info = "2.0.5"
regex = "1.11.1"
serde_json = "1.0.140"
static_assertions = "1.1.0"
supports-color = "3.0.2"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "parsing"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "log"] }
uuid = { version = "1.17.0", features = ["v4"]}
xmltree = "0.11.0"

# Dependencies for the mock client only
async-io = { version = "2.4.1", optional = true }
async-lock = { version = "3.4.0", optional = true }
md-5 = { version = "0.10.6", optional = true }
rand = { version = "0.8.5", optional = true }
rand_chacha = { version = "0.3.1", optional = true }

[dev-dependencies]
aws-config = "1.8.0"
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.94.0"
aws-smithy-runtime-api = "1.8.1"
clap = { version = "4.5.40", features = ["derive"] }
ctor = "0.4.2"
proptest = "1.7.0"
rusty-fork = "0.3.0"
tempfile = "3.20.0"
test-case = "3.3.1"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

# HACK: we want our own tests to use the mock client, but don't want to enable it for consumers by
# default, so we take a dev-dependency on ourself with that feature enabled.
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
mountpoint-s3-client = { path = ".", features = ["mock"] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[features]
mock = ["dep:async-io", "dep:async-lock", "dep:md-5", "dep:rand", "dep:rand_chacha"]
# Features for choosing tests
s3_tests = []
fips_tests = []
s3express_tests = []
pool_tests = []

[lib]
doctest = false
