[package]
name = "mountpoint-s3-client"
# See `/doc/PUBLISHING_CRATES.md` to read how to publish new versions.
version = "0.19.7"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/awslabs/mountpoint-s3"
description = "High-performance Amazon S3 client for Mountpoint for Amazon S3."

[dependencies]
mountpoint-s3-crt = { path = "../mountpoint-s3-crt", version = "0.13.7" }

async-trait = "0.1.89"
auto_impl = "1.3.0"
base64ct = { version = "1.8.2", features = ["std"] }
bytes = "1.11.1"
const_format = "0.2.35"
futures = "0.3.31"
metrics = "0.24.3"
percent-encoding = "2.3.2"
pin-project = "1.1.10"
platform-info = "2.0.5"
regex = "1.12.2"
serde_json = "1.0.149"
static_assertions = "1.1.0"
supports-color = "3.0.2"
thiserror = "2.0.17"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tracing = { version = "0.1.44", default-features = false, features = ["std", "log"] }
uuid = { version = "1.19.0", features = ["v4"]}
xmltree = "0.12.0"

# Dependencies for the mock client only
async-io = { version = "2.6.0", optional = true }
async-lock = { version = "3.4.2", optional = true }
md-5 = { version = "0.10.6", optional = true }
rand = { version = "0.10.0", optional = true }

[dev-dependencies]
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-sdk-s3 = { version = "1.120.0", default-features = false, features = ["behavior-version-latest", "sigv4a", "rt-tokio", "default-https-client"] }
aws-smithy-runtime-api = "1.10.0"
clap = { version = "4.5.54", features = ["derive"] }
ctor = "0.6.3"
proptest = "1.9.0"
rusty-fork = "0.3.1"
tempfile = "3.24.0"
test-case = "3.3.1"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

# HACK: we want our own tests to use the mock client, but don't want to enable it for consumers by
# default, so we take a dev-dependency on ourself with that feature enabled.
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
mountpoint-s3-client = { path = ".", features = ["mock"] }

# Required to run the tests using the custom memory pool from the fs crate.
mountpoint-s3-fs = { path = "../mountpoint-s3-fs" }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[features]
mock = ["dep:async-io", "dep:async-lock", "dep:md-5", "dep:rand"]
# Features for choosing tests
s3_tests = []
fips_tests = []
s3express_tests = []
pool_tests = []
fs_pool_tests = []
