[package]
name = "mountpoint-s3-client"
# See `/doc/PUBLISHING_CRATES.md` to read how to publish new versions.
version = "0.20.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/awslabs/mountpoint-s3"
description = "High-performance Amazon S3 client for Mountpoint for Amazon S3."

[dependencies]
mountpoint-s3-crt = { workspace = true }

async-trait = "0.1.89"
auto_impl = "1.3.0"
base64ct = { version = "1.8.3", features = ["std"] }
bytes = "1.12.0"
const_format = "0.2.36"
futures = "0.3.32"
metrics = "0.24.6"
percent-encoding = "2.3.2"
pin-project = "1.1.13"
platform-info = "2.1.0"
regex = "1.12.4"
serde_json = "1.0.150"
static_assertions = "1.1.0"
supports-color = "3.0.2"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "parsing"] }
tracing = { version = "0.1.44", default-features = false, features = ["std", "log"] }
uuid = { version = "1.23.4", features = ["v4"]}
xmltree = "0.12.0"

# Dependencies for the mock client only
async-io = { version = "2.6.0", optional = true }
async-lock = { version = "3.4.2", optional = true }
hex = { version = "0.4.3", optional = true }
md-5 = { version = "0.11.0", optional = true }
rand = { version = "0.10.1", optional = true }

[dev-dependencies]
aws-config = "1.8.18"
aws-credential-types = "1.2.14"
aws-sdk-s3 = { version = "1.137.0", default-features = false, features = ["behavior-version-latest", "sigv4a", "rt-tokio", "default-https-client"] }
aws-smithy-runtime-api = "1.12.3"
clap = { version = "4.6.1", features = ["derive"] }
ctor = "1.0.7"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
proptest = "1.11.0"
rcgen = "0.14.8"
rustls = "0.23.40"
rustls-pki-types = { version = "1.14.1", features = ["std", "alloc"] }
rusty-fork = "0.3.1"
tempfile = "3.27.0"
test-case = "3.3.1"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
tokio-rustls = "0.26.4"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

# HACK: we want our own tests to use the mock client, but don't want to enable it for consumers by
# default, so we take a dev-dependency on ourself with that feature enabled.
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
mountpoint-s3-client = { path = ".", features = ["mock"] }

# Required to run the tests using the custom memory pool from the fs crate.
mountpoint-s3-fs = { path = "../mountpoint-s3-fs" }

[build-dependencies]
built = { version = "0.8.1", features = ["git2"] }

[features]
mock = ["dep:async-io", "dep:async-lock", "dep:hex", "dep:md-5", "dep:rand"]
# Features for choosing tests
s3_tests = []
fips_tests = []
s3express_tests = []
pool_tests = []
fs_pool_tests = []
