[package]
name = "mountpoint-s3-crt-sys"
# Steps to publish a new release:
# - Pull request to bump version number and update CHANGELOG.md
# - Create a new Git tag `mountpoint-s3-crt-sys-0.x.y`
# - Run `cargo publish`
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/mountpoint-s3"
description = "Rust FFI bindings to the AWS Common Runtime for Mountpoint for Amazon S3."

[build-dependencies]
bindgen = { version = "0.60.1", default-features = false, features = ["runtime"] }
cc = "1.0.73"
cmake = "0.1.48"
rustflags = "0.1.1"
which = "4.3.0"

[dependencies]
libc = "0.2.126"
log = "0.4.17"
smallstr = "0.3.0"

[lib]
doctest = false
