[package]
name = "mountpoint-s3-crt"
# See `/doc/PUBLISHING_CRATES.md` to read how to publish new versions.
version = "0.13.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/awslabs/mountpoint-s3"
description = "Rust interface to the AWS Common Runtime for Mountpoint for Amazon S3."

[dependencies]
mountpoint-s3-crt-sys = { path = "../mountpoint-s3-crt-sys", version = "0.15.2" }

futures = "0.3.31"
libc = "0.2.176"
log = "0.4.28"
smallstr = "0.3.1"
static_assertions = "1.1.0"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.48", features = ["derive"] }
criterion = "0.7.0"
ctor = "0.5.0"
rand = { version = "0.9.2", features = ["small_rng"] }
serde_json = "1.0.145"
test-case = "3.3.1"
tracing = { version = "0.1.41", default-features = false, features = ["std", "log"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[[bench]]
name = "event_loop_future"
harness = false

[[bench]]
name = "checksums"
harness = false
