[package]
name = "mountpoint-s3-crt"
# See `/doc/PUBLISHING_CRATES.md` to read how to publish new versions.
version = "0.13.7"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/awslabs/mountpoint-s3"
description = "Rust interface to the AWS Common Runtime for Mountpoint for Amazon S3."

[dependencies]
mountpoint-s3-crt-sys = { path = "../mountpoint-s3-crt-sys", version = "0.16.0" }

futures = "0.3.31"
libc = "0.2.179"
log = "0.4.29"
smallstr = "0.3.1"
static_assertions = "1.1.0"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.54", features = ["derive"] }
criterion = "0.8.1"
ctor = "0.6.3"
rand = "0.10.0"
serde_json = "1.0.149"
test-case = "3.3.1"
tracing = { version = "0.1.44", default-features = false, features = ["std", "log"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[[bench]]
name = "event_loop_future"
harness = false

[[bench]]
name = "checksums"
harness = false
