[package]
name = "mountpoint-s3"
version = "1.19.1"
edition = "2024"
license = "Apache-2.0"
publish = false
default-run = "mount-s3"

[dependencies]
mountpoint-s3-fs = { path = "../mountpoint-s3-fs", version = "0.6.0" }
mountpoint-s3-client = { path = "../mountpoint-s3-client", version = "0.18.0" }

anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.40", features = ["derive"] }
const_format = "0.2.34"
futures = "0.3.31"
nix = { version = "0.29.0", default-features = false, features = ["fs", "process", "signal", "user"] }
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
sysinfo = "0.35.2"
tracing = "0.1.41"

[dev-dependencies]
mountpoint-s3-client = { path = "../mountpoint-s3-client", features = ["mock"] }
mountpoint-s3-fuser = { path = "../mountpoint-s3-fuser" }
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
aws-config = "1.8.0"
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.94.0"
futures = { version = "0.3.31", features = ["thread-pool"] }
predicates = "3.1.3"
proptest = "1.7.0"
proptest-derive = "0.5.1"
syscalls = "0.6.18"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
test-case = "3.3.1"
tempfile = "3.20.0"
tokio = { version = "1.45.1" }
tracing = { version = "0.1.41", features = ["log"] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[features]
# Unreleased feature flags
block_size = ["mountpoint-s3-fs/block_size"]
event_log = ["mountpoint-s3-fs/event_log"]
mem_limiter = ["mountpoint-s3-fs/mem_limiter"]
otlp_integration = ["mountpoint-s3-fs/otlp_integration"]
# Features for choosing tests
s3_tests = ["mountpoint-s3-fs/s3_tests"]
fuse_tests = ["mountpoint-s3-fs/fuse_tests"]
s3express_tests = ["mountpoint-s3-fs/s3express_tests"]
# Other feature flags
mock = ["mountpoint-s3-client/mock", "futures/thread-pool", "tracing/log"]

[lib]
doctest = false

[[bin]]
name = "mount-s3"
path = "src/main.rs"

[[bin]]
name = "mock-mount-s3"
path = "src/bin/mock-mount-s3.rs"
required-features = ["mock"]

[[bin]]
name = "mount-s3-log-analyzer"
path = "src/bin/mount-s3-log-analyzer.rs"

[[bin]]
name = "file-system-benchmarks"
path = "src/bin/file-system-benchmarks.rs"
